[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "appstrings"
authors = [
    {name = "Ángel Fernández Pineda", email = "74291754+afpineda@users.noreply.github.com"},
]
description = "Minimal string translation library for Python"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["translation", "internationalization", "I18N"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/afpineda/appstrings-python"