[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "appstrings"
authors = [{ name = "Ángel Fernández Pineda" }]
description = "Minimal string translation library"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["translation", "internationalization", "I18N"]
license = { file = "LICENSE.md" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Internationalization"
]
dynamic = ["version"]

[tool.setuptools]
py-modules = [
    "appstrings"
]

[project.urls]
Homepage = "https://github.com/afpineda/appstrings-python"

[tool.setuptools_scm]
# This table is empty on purpose
